--- a/src/killclipper/view/ClipWorkProgressView.fxml
+++ b/src/killclipper/view/ClipWorkProgressView.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="305.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="killclipper.controller.ClipWorkProgressController">
    <children>
-      <ScrollPane prefHeight="368.0" prefWidth="305.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane minHeight="368.0" prefWidth="305.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox fx:id="elementBox" prefHeight="356.0" prefWidth="285.0" />
+            <VBox fx:id="elementBox" prefHeight="330.0" prefWidth="285.0" spacing="20.0">
+               <padding>
+                  <Insets bottom="2.0" />
+               </padding></VBox>
          </content>
       </ScrollPane>
       <Button fx:id="cancelButton" layoutX="14.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleCancelAction" text="Cancel" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="14.0" />
