--- a/src/killclipper/view/SyncView.fxml
+++ b/src/killclipper/view/SyncView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.media.MediaView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="killclipper.controller.SyncController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1124.0" prefHeight="700.0" prefWidth="1124.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="killclipper.controller.SyncController">
    <children>
       <StackPane fx:id="mediaPane" prefHeight="655.0" prefWidth="960.0" style="-fx-background-color: #000000;" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -17,27 +17,23 @@
       </StackPane>
       <AnchorPane layoutY="659.0" prefHeight="65.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Pane fx:id="killTimelinePane" layoutY="10.0" prefHeight="25.0" prefWidth="768.0" style="-fx-background-color: #000000;" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-            <Pane prefHeight="65.0" prefWidth="960.0">
-               <children>
-                  <Button fx:id="playPauseButton" alignment="CENTER" layoutX="17.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePlayPauseAction" text="&gt;" textAlignment="CENTER" />
-                  <Button fx:id="seekBackButton" alignment="CENTER" layoutX="42.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSeekBackAction" text="&lt;-" textAlignment="CENTER" />
-                  <Button fx:id="seekForwardButton" alignment="CENTER" layoutX="70.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSeekForwardAction" text="-&gt;" textAlignment="CENTER" />
-                  <Button fx:id="stepBackButton" alignment="CENTER" layoutX="98.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleStepBackAction" text="&lt;|" textAlignment="CENTER" />
-                  <Button fx:id="stepForwardButton" alignment="CENTER" layoutX="126.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleStepForwardAction" text="|&gt;" textAlignment="CENTER" />
-                  <Button fx:id="previousKillButton" alignment="CENTER" layoutX="154.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePreviousKillAction" text="&lt;K" textAlignment="CENTER" />
-                  <Button fx:id="nextKillButton" alignment="CENTER" layoutX="185.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleNextKillAction" text="K&gt;" textAlignment="CENTER" />
-                  <Button fx:id="previousSyncTargetButton" alignment="CENTER" layoutX="215.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePreviousSyncTargetAction" text="&lt;T" textAlignment="CENTER" />
-                  <Button fx:id="nextSyncTargetButton" alignment="CENTER" layoutX="245.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleNextSyncTargetAction" text="T&gt;" textAlignment="CENTER" />
-                  <Label fx:id="syncTargetLabel" layoutX="280.0" layoutY="37.0" minHeight="25.0" prefHeight="25.0" prefWidth="159.0" text="Target: Unknown" />
-                  <Button fx:id="syncButton" alignment="CENTER" layoutX="439.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSyncAction" text="Sync" textAlignment="CENTER" />
-                  <Label fx:id="syncTimeLabel" layoutX="484.0" layoutY="37.0" minHeight="25.0" prefHeight="25.0" prefWidth="98.0" text="Sync: 0 seconds" />
-                  <Button fx:id="settingsButton" alignment="CENTER" layoutX="589.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleShowSettingsAction" text="Settings" textAlignment="CENTER" />
-                  <Button fx:id="generateButton" alignment="CENTER" layoutX="644.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleGenerateClipworkAction" text="Generate" textAlignment="CENTER" />
-                  <Button fx:id="fullscreenButton" alignment="CENTER" layoutX="918.0" layoutY="37.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleFullscreenAction" text="[ ]" textAlignment="CENTER" />
-               </children>
-            </Pane>
-            <Slider fx:id="scrubber" majorTickUnit="60.0" minorTickCount="5" prefHeight="7.0" prefWidth="780.0" showTickMarks="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Pane fx:id="killTimelinePane" layoutY="10.0" prefHeight="25.0" style="-fx-background-color: #000000;" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" />
+            <Slider fx:id="scrubber" majorTickUnit="300.0" minorTickCount="4" prefHeight="15.0" prefWidth="960.0" showTickMarks="true" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Button fx:id="playPauseButton" alignment="CENTER" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePlayPauseAction" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0" />
+            <Button fx:id="seekBackButton" alignment="CENTER" layoutX="64.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSeekBackAction" text="&lt;-" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="64.0" />
+            <Button fx:id="seekForwardButton" alignment="CENTER" layoutX="92.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSeekForwardAction" text="-&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="92.0" />
+            <Button fx:id="stepBackButton" alignment="CENTER" layoutX="135.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleStepBackAction" text="&lt;|" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="135.0" />
+            <Button fx:id="stepForwardButton" alignment="CENTER" layoutX="164.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleStepForwardAction" text="|&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="164.0" />
+            <Button fx:id="previousKillButton" alignment="CENTER" layoutX="208.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePreviousKillAction" text="&lt;K" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="208.0" />
+            <Button fx:id="nextKillButton" alignment="CENTER" layoutX="239.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleNextKillAction" text="K&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="239.0" />
+            <Button fx:id="previousSyncTargetButton" alignment="CENTER" layoutX="285.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handlePreviousSyncTargetAction" text="&lt;T" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="285.0" />
+            <Button fx:id="nextSyncTargetButton" alignment="CENTER" layoutX="316.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleNextSyncTargetAction" text="T&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="316.0" />
+            <Label fx:id="syncTargetLabel" layoutX="354.0" layoutY="39.0" minHeight="25.0" prefHeight="25.0" prefWidth="159.0" text="Target: Unknown" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="354.0" />
+            <Button fx:id="syncButton" alignment="CENTER" layoutX="522.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleSyncAction" text="Sync" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="522.0" />
+            <Label fx:id="syncTimeLabel" layoutX="574.0" layoutY="39.0" minHeight="25.0" prefHeight="25.0" prefWidth="98.0" text="Sync: 0 seconds" AnchorPane.bottomAnchor="1.0" />
+            <Button fx:id="settingsButton" alignment="CENTER" layoutX="798.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleShowSettingsAction" text="Settings" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="107.0" />
+            <Button fx:id="generateButton" alignment="CENTER" layoutX="853.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleGenerateClipworkAction" text="Generate" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="46.0" />
+            <Button fx:id="fullscreenButton" alignment="CENTER" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleFullscreenAction" text="[ ]" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="1.0" />
          </children>
       </AnchorPane>
    </children>
