--- a/src/killclipper/view/ClipWorkProgressView.fxml
+++ b/src/killclipper/view/ClipWorkProgressView.fxml
@@ -2,21 +2,24 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="305.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="killclipper.controller.ClipWorkProgressController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="killclipper.controller.ClipWorkProgressController">
    <children>
-      <ScrollPane minHeight="368.0" prefWidth="305.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane minHeight="368.0" prefHeight="608.0" prefWidth="545.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox fx:id="elementBox" prefHeight="330.0" prefWidth="285.0" spacing="20.0">
+            <VBox fx:id="elementBox" prefHeight="330.0" prefWidth="525.0" spacing="20.0">
                <padding>
                   <Insets bottom="1.0" />
                </padding></VBox>
          </content>
       </ScrollPane>
       <Button fx:id="cancelButton" layoutX="14.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleCancelAction" text="Cancel" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="14.0" />
+      <Button fx:id="outputFolderButton" disable="true" layoutX="74.0" layoutY="615.0" mnemonicParsing="false" onAction="#handleOutputFolderAction" text="Output Folder..." AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="74.0" />
+      <Label fx:id="outputFolderPathLabel" layoutX="175.0" layoutY="616.0" prefHeight="20.0" prefWidth="300.0" text="path" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="175.0" />
       <Button fx:id="startButton" layoutX="249.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleStartAction" text="Start" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="14.0" />
    </children>
 </AnchorPane>
