--- a/src/killclipper/view/SyncView.fxml
+++ b/src/killclipper/view/SyncView.fxml
@@ -34,6 +34,7 @@
             <Button fx:id="settingsButton" alignment="CENTER" layoutX="798.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleShowSettingsAction" text="Settings" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="107.0" />
             <Button fx:id="generateButton" alignment="CENTER" layoutX="853.0" layoutY="39.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleGenerateClipworkAction" text="Generate" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="46.0" />
             <Button fx:id="fullscreenButton" alignment="CENTER" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleFullscreenAction" text="[ ]" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="1.0" />
+            <Button fx:id="killboardButton" alignment="CENTER" layoutX="907.0" layoutY="41.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#handleShowKillboardAction" text="Killboard" textAlignment="CENTER" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="162.0" />
          </children>
       </AnchorPane>
    </children>
